# NES-Emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  Nemo.cpp  main.cpp
Hardware/Processing-Units/include/: apu.h  bus.h  cpu-op-codes.h  cpu.h  ppu.h
Hardware/Processing-Units/src/: bus.cpp  cpu.cpp
debug/: cpu-debug.h
dependencies/: CMakeLists.txt
dependencies/logger/: CMakeLists.txt  clogs.h
dependencies/logger/include/: log-stasher.h  log.h  logger-manager.h  logger.h
dependencies/logger/src/: log-stasher.cpp  log.cpp  logger-manager.cpp  logger.cpp
docs/: Untitled.mdj
gui/include/: gui.h  screen.h
gui/src/: gui.cpp  screen.cpp
nes/: CMakeLists.txt  nes.cpp  nes.h
nes/cartridge/include/: cartridge.h  mapper.h
nes/cartridge/mapppers/include/: mapper.h  nrom.h
nes/cartridge/mapppers/src/: nrom.cpp
nes/cartridge/src/: cartridge.cpp
nes/processing-units/: apu.h
nes/processing-units/include/: apu.h  bus.h  cpu-op-codes.h  cpu.h  ppu.h
nes/processing-units/src/: bus.cpp  cpu.cpp  ppu.cpp
